--- a/Magic_Food/index.html
+++ b/Magic_Food/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Magic Food</title>
+    <link rel="stylesheet" src="./style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Not Render</h1>
-    </div>
+    <div id="root">Not Render</div>
     <script type="module" src="./src/App.js"></script>
   </body>
 </html>
