--- a/practice/index.html
+++ b/practice/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Practice React</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"><h1>Not Render</h1></div>
+    <script type="module" src="./src/App.js"></script>
+  </body>
 </html>
